feat(blog): VSCode Intellisense Post

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -5,3 +5,10 @@ chatdisabled:
   image_url: https://github.com/ChatDisabled.png
   socials:
     github: ChatDisabled
+ihyajb:
+  name: aj
+  title: Contributor of the Qbox Project
+  url: https://github.com/ihyajb
+  image_url: https://github.com/ihyajb.png
+  socials:
+    github: ihyajb
