--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -5,3 +5,11 @@ chatdisabled:
   image_url: https://github.com/ChatDisabled.png
   socials:
     github: ChatDisabled
+  
+scorpion:
+  name: Scorpion
+  title: Volunteer for the Qbox Project
+  url: https://github.com/Scorpion7162
+  image_url: https://r2.fivemanage.com/image/Z9ftITFQ52WP.png
+  socials:
+    github: Scorpion7162
