feat: new linux server tutorial

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -21,3 +21,11 @@ scorpion:
   image_url: https://r2.fivemanage.com/image/Z9ftITFQ52WP.png
   socials:
     github: Scorpion7162
+  
+codexis:
+  name: Codexis
+  title: Volunteer for the Qbox Project
+  url: https://github.com/CodexisPhantom
+  image_url: https://github.com/CodexisPhantom.png
+  socials:
+    github: CodexisPhantom
