--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -21,3 +21,11 @@ scorpion:
   image_url: https://r2.fivemanage.com/image/Z9ftITFQ52WP.png
   socials:
     github: Scorpion7162
+
+novamonkey:
+  name: novamonkey
+  title: Volunteer for the Qbox Project and tea drinker
+  url: https://github.com/northernmonkey98
+  image_url: https://avatars.githubusercontent.com/u/32420319?v=4
+  socials:
+    github: northernmonkey98
