feat(blog): navigating through qbox (#13)
Co-authored-by: ChatDisabled <44729807+ChatDisabled@users.noreply.github.com>

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -21,6 +21,14 @@ scorpion:
   image_url: https://r2.fivemanage.com/image/Z9ftITFQ52WP.png
   socials:
     github: Scorpion7162
+
+ilomilo:
+  name: ilomilo
+  title: Full Stack Developer
+  url: https://github.com/iloomilo
+  image_url: https://i.imgur.com/ypvcHw9.png
+  socials:
+    github: iloomilo 
   
 codexis:
   name: Codexis
